LPS-74760 - Fix main thread button overlapping after panel

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_panels.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_panels.scss
@@ -1,3 +1,7 @@
+.panel {
+	position: inherit;
+}
+
 // .panel-header styling from lexicon-base/_panels.scss
 .panel-heading {
 	border-bottom: $panel-header-border-bottom-width solid transparent;
